# splatt

./: .gitignore  .travis.yml  CHANGES.md  CMakeLists.txt  CREDITS.md  LICENSE  README.md  README_SC16.txt  configure  my_configure.sh  splatt.sh
apps/: CMakeLists.txt  splatt.c  ttkrao.c  ttstats.c
bench/: CMakeLists.txt  tucker_bench.c
cmake/: constants.cmake  debug.cmake  flags.cmake  fortran.cmake  lapack.cmake  mpi.cmake  openmp.cmake  partition.cmake  system.cmake  types.cmake  version.cmake  warnings.cmake
doxygen/: 00manual.dox  10intro.dox  20setup.dox  30running.dox  40api.dox  50mpi.dox  60licence.dox  70contact.dox  80cite.dox  Doxyfile  header.tex  splatt.bib
include/: CMakeLists.txt  splatt.h
include/splatt/: api_csf.h  api_factorization.h  api_kernels.h  api_kruskal.h  api_mpi.h  api_options.h  api_version.h  constants.h  cpd.h  cpd_constraints.h  cpd_new.h  global_options.h  structs.h  types.h  types_config.h
lib/: CMakeLists.txt
matlab/: make.m  make_octave.m  splatt_cpd.c  splatt_dim.m  splatt_innerprod.m  splatt_load.c  splatt_mttkrp.c  splatt_norm.m  splatt_shared.h  splatt_ttm.c
mex/: build.sh  make.m  make_octave.m  splatt_cpd.c  splatt_cpd.m  splatt_load.c  splatt_load.m  splatt_mttkrp.c  splatt_mttkrp.m  splatt_shared.h
scripts/: FindCBLAS.cmake  FindEigen3.cmake  cp_als.sh  download-blas-lapack.sh  download-cmake.sh  mpi_test.sh  my_plot_rmse.py  plot_rmse.py  plot_speedup.py  scaling.pbs  split.sh  test.sh
src/: CMakeLists.txt  als.c  ao-admm.c  base.c  base.h  bench.c  bench.h  bfs.cc  complete.c  complete.h  completion.c  completion.h  convert.c  convert.h  coo.c  coo.h  cpd.c  cpd.h  csf.c  csf.h  ftensor.c  ftensor.h  graph.c  graph.h  io.c  io.h  kruskal.c  kruskal.h  matching.cc  matrix.c  matrix.h  mpi.c  mpi.h  mttkrp.c  mttkrp.cc  mttkrp.h  mutex_pool.c  mutex_pool.h  opts.c  reorder.c  (+33 more)
src/SpMP/: COO.cpp  COO.hpp  CSR.cpp  CSR.hpp  Permute.cpp  PrefixSum.cpp  SpMV.cpp  Utils.cpp  Utils.hpp  mm_io.cpp  mm_io.h  summary.py
src/SpMP/reordering/: BFSBipartite.cpp  ConnectedComponents.cpp  RCM.cpp
src/SpMP/test/: BFSBipartite_test.cpp  find_rect.cpp  ilu0.cpp  test.sh
src/ccp/: ccp.c  ccp.h
src/cmds/: cmd_bench.c  cmd_check.c  cmd_completion.c  cmd_convert.c  cmd_cpd.c  cmd_cpd_constraint.h  cmd_generate.c  cmd_reorder.c  cmd_sgd.c  cmd_stats.c  cmd_tucker.c  mpi_cmd_cpd.c  splatt_bin.c  splatt_cmds.h
src/completion/: als.c  ccd.c  completion.c  completion.cc  completion.h  gd.c  gradient.c  gradient.h  lbfgs.c  nlcg.c  sgd.c  sgd.cc
src/completion/liblbfgs/: lbfgs.c
src/cpd/: admm.c  admm.h  cpd.c  cpd.h
src/cpd/constraints/: constraints.c  frob.c  lasso.c  nonneg.c  nonneg_frob.c  nonneg_lasso.c  rowsimp.cc  simplex.cc  smooth.c
src/mpi/: mpi.h  mpi_cpd.c  mpi_distribute.c  mpi_io.c  mpi_mat_distribute.c  mpi_setup.c
tests/: CMakeLists.txt  api_test.c  base_test.c  ccp_test.c  coo_test.c  cpd_test.c  csf_alloc_test.c  csf_densetile_test.c  csf_test.c  graph.c  io_test.c  main.c  matrix_test.c  mttkrp_test.c  mutex_test.c  reorder_test.c  rmse_test.c  sort_test.c  splatt_test.h  sptensor_test.c  svd_test.c  test_ttm.m  thread_partition_test.c  tile_csf_test.c  tile_dense_test.c  tile_test.c  tile_traverse_test.c  ttm_test.c  util_test.c
tests/ctest/: ctest.h
tests/graphs/: med.graph  small.graph  small4.graph
tests/mpi/: mpi_io.c  mpi_main.c
tests/tensors/: med.tns  med4.tns  med5.tns  med_b.tns  med_c.tns  small.tns  small4.tns  small4_zeroidx.tns
